--- a/R-and-RStudio-Self-Test.html
+++ b/R-and-RStudio-Self-Test.html
@@ -1572,18 +1572,66 @@ combined_logical &lt;- c(num_logical, char_logical)</code></pre>
 <p><strong>Challenge 3b:</strong> What is the median height of the new <code>heights_no_na</code> vector?</p>
 <p><strong>Challenge 3c:</strong> How many of the heights from <code>heights_no_na</code> are greater than 67?</p>
 <p>For more information on subsetting vectors, click <a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html#subsetting_vectors">here</a></p>
-<p><strong>Challenge 4a</strong> Download a dataset using the <code>download.file()</code> function. The code below is an example. You must supply the correct file path for the <code>destfile=</code> argument</p>
+</div>
+<div id="starting-with-data" class="section level2">
+<h2>Starting with data</h2>
+<p><strong>Challenge 1a</strong> Download a dataset using the <code>download.file()</code> function. The code below is an example. You must supply the correct file path for the <code>destfile=</code> argument</p>
 <pre class="r"><code>download.file(url=&quot;https://ndownloader.figshare.com/files/2292169&quot;,
               destfile = &quot;./data_raw/portal_data_joined.csv&quot;)</code></pre>
-<p><strong>Challenge 4b:</strong> Bring the downloaded data file into the R environment using the <code>read.csv</code> function. The code below is an example. You must supply the correct file path</p>
+<p><strong>Challenge 1b:</strong> Bring the downloaded data file into the R environment using the <code>read.csv</code> function. The code below is an example. You must supply the correct file path</p>
 <pre class="r"><code>surveys&lt;-read.csv(&quot;./data_raw/portal_data_joined.csv&quot;)</code></pre>
-<p><strong>Challenge 5:</strong></p>
+<p><strong>Challenge 2:</strong></p>
 <ol style="list-style-type: decimal">
 <li><p>What type of object is <code>surveys</code>?</p></li>
 <li><p>How many rows? How many columns?</p></li>
 <li><p>How many species have been recorded?</p></li>
 </ol>
 <p>For more information about dataframes, click <a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html#what_are_data_frames">here</a></p>
+<p><strong>Challenge 3:</strong> Create an object called <code>surveys_middle</code> using the <code>nrow()</code> function that contains only the <em>middle</em> row of data from <code>surveys</code></p>
+<p>For more information on indexing and subsetting a dataframe in base <code>R</code>, click <a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html#indexing_and_subsetting_data_frames">here</a></p>
+<p><strong>Challenge 4:</strong></p>
+<ol style="list-style-type: decimal">
+<li><p>Create a new object called <code>sex</code> from <code>surveys$sex</code></p></li>
+<li><p>What are the levels of the <code>sex</code>?</p></li>
+</ol>
+<p>3a. Rename the <code>&quot; &quot;</code> level of <code>sex</code> to <code>&quot;undetermined&quot;</code></p>
+<p>3b. Rename <code>&quot;M&quot;</code> and <code>&quot;F&quot;</code> to <code>&quot;male&quot;</code> and <code>&quot;female&quot;</code>, respectively.</p>
+<ol start="4" style="list-style-type: decimal">
+<li>Create a basic barplot of <code>sex</code> where the level <code>&quot;undetermined&quot;</code> is plotted last (i.e., at the right-most position)</li>
+</ol>
+<p>For more information on factors, levels, re-naming, and re-ordering, click <a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html#factors">here</a></p>
+<p><strong>Challenge 5:</strong></p>
+<p>1.Use the package <code>lubridate</code> to create add a Date column to <code>surveys</code></p>
+<ol start="2" style="list-style-type: decimal">
+<li>There should be 129 NAs in your new Date column. Identify the rows of <code>year</code>, <code>month</code>, and <code>day</code> that are failing to parse into the Date column. Why are they failing?</li>
+</ol>
+<p>For more information on working with dates in <code>R</code>, click <a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html#formatting_dates">here</a> or <a href="https://r4ds.had.co.nz/dates-and-times.html">here</a></p>
+</div>
+<div id="manipulating-data" class="section level2">
+<h2>Manipulating Data</h2>
+<p><strong>Challenge 1:</strong> Using pipes, function <code>filter</code>, and function <code>select</code> from the <code>dplyr</code> package, subset the surveys data to include animals collected before 1995 and retain only the columns <code>year</code>, <code>sex</code>, and <code>weight</code>.</p>
+<p>For more information on pipes, click <a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html#pipes">here</a> or <a href="https://www.datacamp.com/community/tutorials/pipe-r-tutorial">here</a></p>
+<p><strong>Challenge 2:</strong> Use pipes, <code>group_by()</code>, and <code>summarize()</code> to find the mean, min, and max hindfoot length for each species (using <code>species_id</code>). Also add the number of observations (hint: see <code>?n</code>).</p>
+<p>For more information the <em>split-apply-combine</em> paradigm, click <a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html#split-apply-combine_data_analysis_and_the_summarize()_function">here</a></p>
+<p><strong>Challenge 3:</strong></p>
+<ol style="list-style-type: decimal">
+<li><p>The surveys data set has two measurement columns: <code>hindfoot_length</code> and <code>weight</code>. This makes it difficult to do things like look at the relationship between mean values of each measurement per year in different plot types. First, use <code>gather()</code> to create a dataset where we have a key column called <code>measurement</code> and a value column that takes on the value of either <code>hindfoot_length</code> or <code>weight</code>. Hint: You’ll need to specify which columns are being gathered.</p></li>
+<li><p>With this new data set, calculate the average of each measurement in each <code>year</code> for each different <code>plot_type</code>. Then <code>spread()</code> them into a data set with a column for <code>hindfoot_length</code> and <code>weight</code>. Hint: You only need to specify the key and value columns for <code>spread()</code></p></li>
+</ol>
+<p><strong>Challenge 4:</strong></p>
+<ol style="list-style-type: decimal">
+<li>Create a new dataframe called <code>surveys_complete</code> that has the following characteristics:</li>
+</ol>
+<ul>
+<li><p>no missing values for <code>weight</code>, <code>hindfoot_length</code></p></li>
+<li><p>no observations for <code>sex: undetermined</code></p></li>
+</ul>
+<ol start="2" style="list-style-type: decimal">
+<li><p>Create a dataframe called <code>species_counts</code> that extracts the most common <code>species_id</code>s from <code>surveys_complete</code> (common = more than <strong>50</strong> observations)</p></li>
+<li><p>Manipulate <code>surveys_complete</code> to include only those species found in <code>species_counts</code></p></li>
+</ol>
+<p>For more information on reshaping data, click <a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html#reshaping_with_gather_and_spread">here</a></p>
+<p><strong>Challenge 5:</strong> Write your new <code>surveys_complete</code> dataframe to file and be sure to supply the correct path</p>
 </div>
 </div>
 
