--- a/R-and-RStudio-Self-Test.html
+++ b/R-and-RStudio-Self-Test.html
@@ -1546,7 +1546,7 @@ div.tocify {
 </div>
 <div id="begin-self-test" class="section level1">
 <h1>Begin Self-Test</h1>
-<p>Here you will be presented with a series of “challenges”. The scipts (codes) will be provided to you and you will be asked to use them to answer questions. After each challenge, a link to more information will be provided so that you can learn more about the skill tested and check your answers.</p>
+<p>Here you will be presented with a series of “challenges”. Some scipts (codes), packages, and functions will be provided to you and you will be asked to use them to answer questions. After each challenge, a link to more information will be provided so that you can learn more about the skill tested and check your answers.</p>
 <div id="introduction-to-r" class="section level2">
 <h2>Introduction to R</h2>
 <p><strong>Challenge #1:</strong> What are the final values of <code>mass</code>, <code>age</code>, and <code>mass_index</code></p>
@@ -1572,6 +1572,14 @@ combined_logical &lt;- c(num_logical, char_logical)</code></pre>
 <p><strong>Challenge 3b:</strong> What is the median height of the new <code>heights_no_na</code> vector?</p>
 <p><strong>Challenge 3c:</strong> How many of the heights from <code>heights_no_na</code> are greater than 67?</p>
 <p>For more information on subsetting vectors, click <a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html#subsetting_vectors">here</a></p>
+<div id="scoring-necessary" class="section level3">
+<h3>Scoring (Necessary??)</h3>
+<ul>
+<li><p>For each challenge you completed without looking anything up: 2 points</p></li>
+<li><p>For each challenge you had an idea of how to complete, but had to look up a function, etc.: 1 points</p></li>
+<li><p>For each challenge you needed to look up completely: 0 points</p></li>
+</ul>
+</div>
 </div>
 <div id="starting-with-data" class="section level2">
 <h2>Starting with data</h2>
@@ -1593,11 +1601,9 @@ combined_logical &lt;- c(num_logical, char_logical)</code></pre>
 <ol style="list-style-type: decimal">
 <li><p>Create a new object called <code>sex</code> from <code>surveys$sex</code></p></li>
 <li><p>What are the levels of the <code>sex</code>?</p></li>
-</ol>
-<p>3a. Rename the <code>&quot; &quot;</code> level of <code>sex</code> to <code>&quot;undetermined&quot;</code></p>
-<p>3b. Rename <code>&quot;M&quot;</code> and <code>&quot;F&quot;</code> to <code>&quot;male&quot;</code> and <code>&quot;female&quot;</code>, respectively.</p>
-<ol start="4" style="list-style-type: decimal">
-<li>Create a basic barplot of <code>sex</code> where the level <code>&quot;undetermined&quot;</code> is plotted last (i.e., at the right-most position)</li>
+<li><p>Rename the <code>&quot; &quot;</code> level of <code>sex</code> to <code>&quot;undetermined&quot;</code></p></li>
+<li><p>Rename <code>&quot;M&quot;</code> and <code>&quot;F&quot;</code> to <code>&quot;male&quot;</code> and <code>&quot;female&quot;</code>, respectively.</p></li>
+<li><p>Create a basic barplot of <code>sex</code> where the level <code>&quot;undetermined&quot;</code> is plotted last (i.e., at the right-most position)</p></li>
 </ol>
 <p>For more information on factors, levels, re-naming, and re-ordering, click <a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html#factors">here</a></p>
 <p><strong>Challenge 5:</strong></p>
