--- a/R-and-RStudio-Self-Test.html
+++ b/R-and-RStudio-Self-Test.html
@@ -1522,7 +1522,7 @@ div.tocify {
 <h1>Before we begin</h1>
 <p>Be sure to download both <a href="https://www.r-project.org/">R</a> and <a href="https://rstudio.com/">RStudio</a></p>
 <p><strong>What’s the difference?</strong></p>
-<p><code>R</code> can run without <code>RStudio</code>, but <code>RStudio</code> can’t run without <code>R</code>. To learn more about the differences and why they’re important, click <a href="https://datacarpentry.org/R-ecology-lesson/00-before-we-start.html#what_is_r_what_is_rstudio">here</a></p>
+<p><code>R</code> is a language. <code>RStudio</code> is an <em>integrated development environment</em> (IDE) that allows you to code in R, edit, annotate, plot, and organize. To learn more about the differences and why they’re important, click <a href="https://datacarpentry.org/R-ecology-lesson/00-before-we-start.html#what_is_r_what_is_rstudio">here</a></p>
 <div id="assumptions" class="section level2">
 <h2>Assumptions</h2>
 <p>For the purposes of this self-test, we will assume you know how to generate and execute commands in the <code>R</code> language. Ideally:</p>
@@ -1530,8 +1530,8 @@ div.tocify {
 <li><p>you are working in <code>RStudio</code></p></li>
 <li><p>you understand the difference between the 4 panes (if not, see <a href="https://datacarpentry.org/R-ecology-lesson/00-before-we-start.html#knowing_your_way_around_rstudio">this</a>)</p>
 <ul>
-<li><p><strong>console</strong></p></li>
-<li><p><strong>source</strong></p></li>
+<li><p><strong>Console</strong></p></li>
+<li><p><strong>Source</strong></p></li>
 <li><p><strong>Environment/History/Other</strong></p></li>
 <li><p>and <strong>File/Plots/Packages/Help/Viewer</strong></p></li>
 </ul></li>
@@ -1541,7 +1541,7 @@ div.tocify {
 </div>
 <div id="most-importantly-remember" class="section level2">
 <h2>Most importantly, remember</h2>
-<p>Learning a new skill, especially if you’re learning from scratch, can be fun and empowering! However, it can also be challenging, frustrating, and down-right aggravating. If this is your first time working with a coding language, it can be overwhelming (and that’s putting it mildly!). The good news is that no matter where you’re starting from, there is an abundance of resources to help you along the way, and you can take comfort in the fact that others have <em>been</em> where you are, and have gotten to where <em>they</em> are by not giving up! Take breaks as needed, ask questions early and often, create a workflow that works for you, and constantly be on the look-out for ways to improve your scripts, workflow, and version control (more on those later!)</p>
+<p>Learning a new skill, especially if you’re learning from scratch, can be fun and empowering! However, it can also be challenging, frustrating, and down-right aggravating. If this is your first time working with a coding language, it can be overwhelming (and that’s putting it mildly!). The good news is that no matter where you’re starting from, there is an abundance of resources to help you along the way, and you can take comfort in the fact that others have been where <em>you</em> are, and have gotten to where <em>they</em> are by not giving up! Take breaks as needed, ask questions early and often, create a workflow that works for you, and constantly be on the look-out for ways to improve your scripts, workflow, and version control (more on those later!)</p>
 </div>
 </div>
 <div id="begin-self-test" class="section level1">
@@ -1571,15 +1571,8 @@ combined_logical &lt;- c(num_logical, char_logical)</code></pre>
 <p>For more information about how to handle missing data, click <a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html#missing_data">here</a></p>
 <p><strong>Challenge 3b:</strong> What is the median height of the new <code>heights_no_na</code> vector?</p>
 <p><strong>Challenge 3c:</strong> How many of the heights from <code>heights_no_na</code> are greater than 67?</p>
+<p><strong>Challenge 3d:</strong> From the <code>heights</code> vector, what is the 3rd and 8th value?</p>
 <p>For more information on subsetting vectors, click <a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html#subsetting_vectors">here</a></p>
-<div id="scoring-necessary" class="section level3">
-<h3>Scoring (Necessary??)</h3>
-<ul>
-<li><p>For each challenge you completed without looking anything up: 2 points</p></li>
-<li><p>For each challenge you had an idea of how to complete, but had to look up a function, etc.: 1 points</p></li>
-<li><p>For each challenge you needed to look up completely: 0 points</p></li>
-</ul>
-</div>
 </div>
 <div id="starting-with-data" class="section level2">
 <h2>Starting with data</h2>
